Adding user section

--- a/index.html
+++ b/index.html
@@ -33,8 +33,23 @@
         </section>
 
         <section class="user-sec">
-            
+            <p class="user-pera">Joined Thousands of Productive Users</p>
+            <div class="user">
+                <div class="user-option">
+                    <p class="user-value">50K</p>
+                    <p class="user-title">Active Users</p>
+                </div>
+                <div class="user-option">
+                    <p class="user-value">2M+</p>
+                    <p class="user-title">Focus Seassions</p>
+                </div>
+                <div class="user-option">
+                    <p class="user-value">95%</p>
+                    <p class="user-title">Saticfaction Rate</p>
+                </div>
+            </div>
         </section>
+   
     </main>
 
     <footer></footer>
