add user input porm

--- a/index.html
+++ b/index.html
@@ -50,8 +50,20 @@
             </div>
         </section>
    
+        <section class="user-input">
+            <div class="input-title">Let's Get in Touch</div>
+            <form >
+                <label class="lable" for="mail">Email</label> <br>
+                <input class="input-area" type="email" id="mail" placeholder="Enter your email"><br><br>
+                <label class="lable" for="name">Name</label><br>
+                <input class="input-area" type="text" id="name" placeholder="Full name"><br>
+                <label class="lable" for="message">Message</label><br>
+                <textarea class="input-area" rows=" 5" id="message">write your message</textarea><br>
+                <button class="input-area common-bg lable">Get in Touch</button>
+
+            </form>
+        </section>
     </main>
 
-    <footer></footer>
 </body>
 </html>
