--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
             </form>
         </section>
     </main>
+    <footer>
+        <h1 class="Name common-bg">DARKFLOW</h1>
+        <p>"Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
 
+        <div class="links">
+            <a href="">Home</a> 
+            <a href="">About</a>
+            <a href="">How is Works</a>
+            <a href="">Services</a>
+        </div>
+    </footer>
 </body>
 </html>
