adding cards on the website

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header>
         <nav>
             <h3>DARKFLOW</h3>
-            <button class="common-bg">Sign Up</button>
+            <button class="common-bg animation">Sign Up</button>
         </nav>
 
         <div class="banner">
             <p class="banner-pera">Cool Dark UI Template For WebFlow Agency!</p>
-            <button class="common-bg">Stay Focused</button>
+            <button class="common-bg animation">Stay Focused</button>
         </div>
     </header>
     <main>
@@ -25,7 +25,7 @@
                 <p class="act-pera">
                     Explore the live preview image your trand in this blod look.
                 </p>
-                <button class="common-bg">Launch Live Preview</button>
+                <button class="common-bg animation ">Launch Live Preview</button>
             </div>
             <div class="act-img">
                 <img class="min-img" src="image/wc-mini.png" alt="">
@@ -49,6 +49,49 @@
                 </div>
             </div>
         </section>
+
+        <section class="cards">
+            <p class="card-pera">What our users say</p>
+            <div class="separate-cards">
+                <div class="card">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <h2>Loved By Designers</h2>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <img class="card-avatar" src="image/avatar.png" alt="">
+                <input type="text" placeholder="Reviewer name"><br>
+                <input class="date-input" type="text" placeholder="Date">
+            </div>
+            <div class="card">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <h2>Loved By Designers</h2>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <img class="card-avatar" src="image/avatar.png" alt="">
+                <input type="text" placeholder="Reviewer name"><br>
+                <input class="date-input" type="text" placeholder="Date">
+            </div>
+            <div class="card">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <img class="star-img" src="image/icon-star.png" alt="">
+                <h2>Loved By Designers</h2>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <img class="card-avatar" src="image/avatar.png" alt="">
+                <input type="text" placeholder="Reviewer name"><br>
+                <input class="date-input" type="text" placeholder="Date">
+            </div>
+            </div>
+
+        </section>
    
         <section class="user-input">
             <div class="input-title">Let's Get in Touch</div>
@@ -59,13 +102,13 @@
                 <input class="input-area" type="text" id="name" placeholder="Full name"><br>
                 <label class="lable" for="message">Message</label><br>
                 <textarea class="input-area" rows=" 5" id="message">write your message</textarea><br>
-                <button class="input-area common-bg lable">Get in Touch</button>
+                <button class="input-area common-bg lable animation">Get in Touch</button>
 
             </form>
         </section>
     </main>
     <footer>
-        <h1 class="Name common-bg">DARKFLOW</h1>
+        <h1 class="Name " style="color:  #4E47FF;">DARKFLOW</h1>
         <p>"Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
 
         <div class="links">
