solve some color of footer

--- a/index.html
+++ b/index.html
@@ -108,14 +108,16 @@
         </section>
     </main>
     <footer>
-        <h1 class="Name " style="color:  #4E47FF;">DARKFLOW</h1>
-        <p>"Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        <div class="footer">
+                    <h1 class="Name " style="color:  #4E47FF;">DARKFLOW</h1>
+        <p class="color">"Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
 
         <div class="links">
-            <a href="">Home</a> 
+            <a  href="">Home</a> 
             <a href="">About</a>
             <a href="">How is Works</a>
             <a href="">Services</a>
+        </div>
         </div>
     </footer>
 </body>
