--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                 <h2>Loved By Designers</h2>
                 <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                 <img class="card-avatar" src="image/avatar.png" alt="">
-                <input type="text" placeholder="Reviewer name"><br>
-                <input class="date-input" type="text" placeholder="Date">
+                <p>Name: Md Shihan</p>
+                <p class="review-date">10 june 2025</p>
+
             </div>
             <div class="card">
                 <img class="star-img" src="image/icon-star.png" alt="">
@@ -74,8 +75,8 @@
                 <h2>Loved By Designers</h2>
                 <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                 <img class="card-avatar" src="image/avatar.png" alt="">
-                <input type="text" placeholder="Reviewer name"><br>
-                <input class="date-input" type="text" placeholder="Date">
+                <p>Name: Md Shihan</p>
+                <p class="review-date">10 june 2025</p>
             </div>
             <div class="card">
                 <img class="star-img" src="image/icon-star.png" alt="">
@@ -86,8 +87,8 @@
                 <h2>Loved By Designers</h2>
                 <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                 <img class="card-avatar" src="image/avatar.png" alt="">
-                <input type="text" placeholder="Reviewer name"><br>
-                <input class="date-input" type="text" placeholder="Date">
+                <p>Name: Md Shihan</p>
+                <p class="review-date">10 june 2025</p>
             </div>
             </div>
 
